# Agentify

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
agents/: openai.yaml
examples/: hackernews.tools.json
source/: .env.example  README.md  pyproject.toml
source/agentify/: agent.py  ax_tree.py  browser.py  cli.py  interstitials.py  llm.py  mapper.py  memory.py  recipe.py  recorder.py  registry.py  selectors.py  session.py
source/docs/: agentify.html
source/tests/: test_agent_loop.py  test_ax_tree.py  test_browser_session.py  test_cli_session.py  test_iframes_live.py  test_interstitials.py  test_interstitials_live.py  test_mapper.py  test_recipe_engine.py  test_recorder.py  test_recorder_live.py  test_registry.py  test_selectors.py  test_session.py
